<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/itemname"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/itemQuantity"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_quantity"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/itemtype"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_quantity"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@android:drawable/ic_delete" />
            </TableRow>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>